[package]
name = "mdprev"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
comrak = "0.53.0"
mime_guess = "2.0.5"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
svgbob = "0.7.6"
syntect = "5.3.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "sync", "fs", "signal"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
